--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
-    "@deliberative/crypto": "^0.7.6",
+    "@monaco-editor/react": "^4.4.6",
     "antd": "^5.0.7",
     "buffer": "^6.0.3",
-    "db3js": "^0.1.8",
-    "google-protobuf": "^3.21.2",
     "lodash": "^4.17.21",
+    "monaco-editor": "^0.34.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
