--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
     "recoil": "^0.7.6",
-    "uint8-to-base64": "^0.2.0"
+    "uint8-to-base64": "^0.2.0",
+    "vite-plugin-commonjs": "^0.6.1"
   },
   "devDependencies": {
     "@types/google-protobuf": "^3.15.6",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@vitejs/plugin-react": "^3.0.0",
     "sass": "^1.57.0",
     "typescript": "^4.9.3",
