--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-player": "^2.11.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-plugin-px2rem": "^0.8.1",
+    "postcss-preset-env": "^8.0.1",
+    "postcss-safe-parser": "^6.0.0",
     "sass": "^1.58.3"
   }
 }
